--- a/po/no.po
+++ b/po/no.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: VERSION\n"
-"POT-Creation-Date: 2021-04-14 15:23+0000\n"
-"PO-Revision-Date: 2021-04-14 15:23+0000\n"
+"POT-Creation-Date: 2021-04-22 12:19+0000\n"
+"PO-Revision-Date: 2021-04-22 12:19+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE TEAM <EMAIL@ADDRESS>\n"
 "Language: no\n"
@@ -19,6 +19,9 @@ msgstr "BankID-app tidsavbrudd."
 
 msgid "The BankID password is invalid."
 msgstr "BankID-passordet er ugyldig."
+
+msgid "Select how you want to confirm the BankID authentication"
+msgstr "Velg hvordan du vil godkjenne BankID"
 
 msgid "You need to activate your BankID in the Handelsbanken app."
 msgstr "Du må aktivere BankID i Handelsbanken-appen."
