chore(DE/OB/Sparkassen): translations + format
[NZG-403]

--- a/po/fi.po
+++ b/po/fi.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: VERSION\n"
-"POT-Creation-Date: 2021-04-29 17:31+0000\n"
-"PO-Revision-Date: 2021-04-29 17:31+0000\n"
+"POT-Creation-Date: 2021-05-13 06:24+0000\n"
+"PO-Revision-Date: 2021-05-13 06:24+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE TEAM <EMAIL@ADDRESS>\n"
 "Language: fi\n"
@@ -15,8 +15,31 @@ msgid "Authentication timed out."
 msgstr "Todennus aikakatkaistiin."
 
 msgid ""
+"For safety reasons you have been logged out. Please login again to continue."
+msgstr ""
+"Sinut on kirjattu ulos turvallisuussyistä. Ole hyvä ja kirjaudu uudestaan "
+"sisään jatkaaksesi."
+
+msgid "Incorrect login credentials. Please try again."
+msgstr "Kirjautumistunnukset väärin. Ole hyvä ja yritä uudestaan."
+
+msgid ""
 "You use your card reader and personal code the same way as you would in the "
 "bank's mobile app."
 msgstr ""
 "Käytä kortinlukijaasi ja henkilökohtaista koodiasi samalla tavalla kuin "
 "pankin mobiilisovelluksessa."
+
+msgid ""
+"Incorrect login credentials. You have one more attempt before your account "
+"will be locked."
+msgstr ""
+"Kirjautumistunnukset väärin. Sinulla on yksi yritys jäljellä ennen kuin "
+"tilisi lukitaan."
+
+msgid ""
+"Incorrect login credentials. Please try entering the first 5 digits of your "
+"PIN or try again."
+msgstr ""
+"Kirjautumistunnukset väärin. Ole hyvä ja kokeile syöttää 5 ensimmäistä "
+"merkkiä PIN-koodistasi tai yritä uudestaan."
