--- a/po/de.po
+++ b/po/de.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: VERSION\n"
-"POT-Creation-Date: 2021-04-29 17:31+0000\n"
-"PO-Revision-Date: 2021-04-29 17:31+0000\n"
+"POT-Creation-Date: 2021-05-13 06:24+0000\n"
+"PO-Revision-Date: 2021-05-13 06:24+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE TEAM <EMAIL@ADDRESS>\n"
 "Language: de\n"
@@ -10,6 +10,14 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+
+#, java-format
+msgid ""
+"Please open the S-pushTAN app on device \"{0}\" and confirm login. Then "
+"click the \"Submit\" button"
+msgstr ""
+"Bitte öffnen Sie die S-pushTAN-App auf dem Gerät “{0}” und bestätigen Sie "
+"die Anmeldung. Klicken Sie dann auf die Schaltfläche „Senden”"
 
 msgid "Input the code from your code card"
 msgstr "Geben Sie den Code von der Codekarte ein."
