--- a/po/tink-aggr-backend.pot
+++ b/po/tink-aggr-backend.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-04-28 15:17+0200\n"
+"POT-Creation-Date: 2021-05-13 08:22+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1835,4 +1835,10 @@ msgid "One-time code must contain only digits."
 msgstr ""
 
 msgid "Invalid one-time code format."
+msgstr ""
+
+#, java-format
+msgid ""
+"Please open the S-pushTAN app on device \"{0}\" and confirm login. Then "
+"click the \"Submit\" button"
 msgstr ""
