--- a/po/no.po
+++ b/po/no.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: VERSION\n"
-"POT-Creation-Date: 2021-05-13 06:24+0000\n"
-"PO-Revision-Date: 2021-05-13 06:24+0000\n"
+"POT-Creation-Date: 2021-05-26 09:50+0000\n"
+"PO-Revision-Date: 2021-05-26 09:50+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE TEAM <EMAIL@ADDRESS>\n"
 "Language: no\n"
@@ -367,3 +367,9 @@ msgstr "Engangskode kan bare inneholde sifre."
 
 msgid "Invalid one-time code format."
 msgstr "Ugyldig engangskode-format."
+
+msgid "Invalid social security number."
+msgstr "Ugyldig personnummer."
+
+msgid "Invalid one-time code."
+msgstr "Ugyldig engangskode."
