feat(FI/Nordea): change suppl info flow
Instead of showing open app button with intent
information about opening app is shown.

[ITE-2681]

--- a/po/fi.po
+++ b/po/fi.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: VERSION\n"
-"POT-Creation-Date: 2021-05-26 09:50+0000\n"
-"PO-Revision-Date: 2021-05-26 09:50+0000\n"
+"POT-Creation-Date: 2021-05-26 14:25+0000\n"
+"PO-Revision-Date: 2021-05-26 14:25+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE TEAM <EMAIL@ADDRESS>\n"
 "Language: fi\n"
@@ -43,3 +43,8 @@ msgid ""
 msgstr ""
 "Kirjautumistunnukset väärin. Ole hyvä ja kokeile syöttää 5 ensimmäistä "
 "merkkiä PIN-koodistasi tai yritä uudestaan."
+
+msgid "Please open the Nordea Codes app and confirm login."
+msgstr ""
+"Ole hyvä ja avaa Nordea Tunnusluvut -sovellus vahvistaaksesi "
+"sisäänkirjautumisen."
