chore(lbp): add proper error mapping for certicode

--- a/po/fr.po
+++ b/po/fr.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: VERSION\n"
-"POT-Creation-Date: 2021-05-26 09:50+0000\n"
-"PO-Revision-Date: 2021-05-26 09:50+0000\n"
+"POT-Creation-Date: 2021-06-02 12:11+0000\n"
+"PO-Revision-Date: 2021-06-02 12:11+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE TEAM <EMAIL@ADDRESS>\n"
 "Language: fr\n"
@@ -84,9 +84,6 @@ msgstr "La référence doit comporter {} caractères au max."
 
 msgid "Transfer amount can't be less than {}."
 msgstr "Le montant du virement doit être au moins de {}."
-
-msgid "Transfer amount can't be less than 1.5 EUR."
-msgstr "Le montant du virement doit être au moins de 1.5 EUR."
 
 msgid ""
 "Check if your authentication parameters are correct:\n"
@@ -1499,3 +1496,12 @@ msgid ""
 msgstr ""
 "Merci de confirmer la connexion dans votre application N26 et de revenir sur "
 "cette page pour continuer la connexion"
+
+msgid ""
+"You are not registered to CerticodePlus. In order to register you need to "
+"download La Banque Postale app from the App Store or Google Play, activate "
+"Certicode Plus and try again."
+msgstr ""
+"Vous n'êtes pas encore inscrit à CerticodePlus. Pour vous inscrire, vous "
+"devez télécharger l'application La Banque Postale depuis l'App Store ou "
+"Google Play, activer Certicode Plus et réessayer."
