--- a/po/tink-aggr-backend.pot
+++ b/po/tink-aggr-backend.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-05-26 13:16+0200\n"
+"POT-Creation-Date: 2021-06-02 14:02+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1850,4 +1850,10 @@ msgid "Invalid social security number."
 msgstr ""
 
 msgid "Invalid one-time code."
+msgstr ""
+
+msgid ""
+"You are not registered to CerticodePlus. In order to register you need to "
+"download La Banque Postale app from the App Store or Google Play, activate "
+"Certicode Plus and try again."
 msgstr ""
