--- a/po/pt.po
+++ b/po/pt.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: VERSION\n"
-"POT-Creation-Date: 2021-06-02 12:11+0000\n"
-"PO-Revision-Date: 2021-06-02 12:11+0000\n"
+"POT-Creation-Date: 2021-06-10 21:00+0000\n"
+"PO-Revision-Date: 2021-06-10 21:00+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE TEAM <EMAIL@ADDRESS>\n"
 "Language: pt\n"
@@ -1386,3 +1386,7 @@ msgid ""
 msgstr ""
 "Por favor confirme o login na sua app N26 e depois volte aqui para "
 "prosseguir com a ligação"
+
+msgid ""
+"Please enter a correct IBAN. It must start with ‘BE’ in capital letters."
+msgstr "Insira um IBAN correto. Deve começar com ‘BE‘ em letras maiúsculas."
