--- a/po/tink-aggr-backend.pot
+++ b/po/tink-aggr-backend.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-02 14:02+0200\n"
+"POT-Creation-Date: 2021-06-10 22:57+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1856,4 +1856,8 @@ msgid ""
 "You are not registered to CerticodePlus. In order to register you need to "
 "download La Banque Postale app from the App Store or Google Play, activate "
 "Certicode Plus and try again."
+msgstr ""
+
+msgid ""
+"Please enter a correct IBAN. It must start with ‘BE’ in capital letters."
 msgstr ""
