fix(de/sparkassen): fix for user mapping errors
[NZG-513]

--- a/po/de.po
+++ b/po/de.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: VERSION\n"
-"POT-Creation-Date: 2021-06-10 21:00+0000\n"
-"PO-Revision-Date: 2021-06-10 21:00+0000\n"
+"POT-Creation-Date: 2021-06-15 13:13+0000\n"
+"PO-Revision-Date: 2021-06-15 13:13+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE TEAM <EMAIL@ADDRESS>\n"
 "Language: de\n"
@@ -2004,3 +2004,11 @@ msgid ""
 msgstr ""
 "Bitte öffnen Sie die S-pushTAN-App auf dem Gerät “{0}” und bestätigen Sie "
 "die Anmeldung. Klicken Sie dann auf die Schaltfläche „Senden”"
+
+msgid ""
+"Bank couldn't find such a user in the system. Are you sure that you have "
+"selected a correct branch or entered a correct username?"
+msgstr ""
+"Die Bank konnte diesen Nutzer nicht im System finden. Sind Sie sicher, dass "
+"Sie die richtige Bank ausgewählt haben und den richtigen Nutzernamen "
+"eingegeben haben?"
