--- a/po/tink-aggr-backend.pot
+++ b/po/tink-aggr-backend.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-10 22:57+0200\n"
+"POT-Creation-Date: 2021-06-15 13:23+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1860,4 +1860,9 @@ msgstr ""
 
 msgid ""
 "Please enter a correct IBAN. It must start with ‘BE’ in capital letters."
+msgstr ""
+
+msgid ""
+"Bank couldn't find such a user in the system. Are you sure that you have "
+"selected a correct branch or entered a correct username?"
 msgstr ""
