--- a/po/fi.po
+++ b/po/fi.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: VERSION\n"
-"POT-Creation-Date: 2021-06-15 13:13+0000\n"
-"PO-Revision-Date: 2021-06-15 13:13+0000\n"
+"POT-Creation-Date: 2021-06-16 13:39+0000\n"
+"PO-Revision-Date: 2021-06-16 13:39+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE TEAM <EMAIL@ADDRESS>\n"
 "Language: fi\n"
@@ -10,6 +10,13 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+
+msgid ""
+"Several simultaneous identification/confirmation attempts. Open the "
+"authentication app to cancel the error."
+msgstr ""
+"Useita yhtäaikaisia tunnistautumisyrityksiä. Avaa tunnistautumissovellus, "
+"jotta voit perua ongelman."
 
 msgid "Authentication timed out."
 msgstr "Todennus aikakatkaistiin."
