--- a/po/tink-aggr-backend.pot
+++ b/po/tink-aggr-backend.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-15 13:23+0200\n"
+"POT-Creation-Date: 2021-06-16 15:39+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1860,6 +1860,11 @@ msgstr ""
 
 msgid ""
 "Please enter a correct IBAN. It must start with ‘BE’ in capital letters."
+msgstr ""
+
+msgid ""
+"Several simultaneous identification/confirmation attempts. Open the "
+"authentication app to cancel the error."
 msgstr ""
 
 msgid ""
