--- a/po/de.po
+++ b/po/de.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: VERSION\n"
-"POT-Creation-Date: 2021-06-15 13:13+0000\n"
-"PO-Revision-Date: 2021-06-15 13:13+0000\n"
+"POT-Creation-Date: 2021-06-28 09:24+0000\n"
+"PO-Revision-Date: 2021-06-28 09:24+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE TEAM <EMAIL@ADDRESS>\n"
 "Language: de\n"
@@ -2012,3 +2012,11 @@ msgstr ""
 "Die Bank konnte diesen Nutzer nicht im System finden. Sind Sie sicher, dass "
 "Sie die richtige Bank ausgewählt haben und den richtigen Nutzernamen "
 "eingegeben haben?"
+
+#, java-format
+msgid ""
+"Please open the \"{0}\" Banking-App app and confirm the login via \"{1}\". "
+"Then click the \"Submit\" button"
+msgstr ""
+"Bitte öffnen Sie die „{0}” Banking-App und bestätigen Sie die Anmeldung mit "
+"„{1}”. Klicken Sie dann auf die Schaltfläche „Senden”"
