--- a/po/de.po
+++ b/po/de.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: VERSION\n"
-"POT-Creation-Date: 2021-06-28 09:24+0000\n"
-"PO-Revision-Date: 2021-06-28 09:24+0000\n"
+"POT-Creation-Date: 2021-06-30 11:51+0000\n"
+"PO-Revision-Date: 2021-06-30 11:51+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE TEAM <EMAIL@ADDRESS>\n"
 "Language: de\n"
@@ -10,6 +10,13 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+
+msgid ""
+"Incorrect login credentials. Are you sure that you have selected a correct "
+"branch?"
+msgstr ""
+"Die Zugangsdaten sind nicht korrekt. Sind Sie sicher, dass Sie die richtige "
+"Bank ausgewählt haben?"
 
 msgid "Input the code from your code card"
 msgstr "Geben Sie den Code von der Codekarte ein."
