--- a/po/sv.po
+++ b/po/sv.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: VERSION\n"
-"POT-Creation-Date: 2021-06-15 13:13+0000\n"
-"PO-Revision-Date: 2021-06-15 13:13+0000\n"
+"POT-Creation-Date: 2021-06-30 11:51+0000\n"
+"PO-Revision-Date: 2021-06-30 11:51+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE TEAM <EMAIL@ADDRESS>\n"
 "Language: sv\n"
@@ -1681,6 +1681,19 @@ msgstr "Autentiseringen avbröts. Vänligen försök igen."
 
 msgid "Authentication error."
 msgstr "Autentiseringsfel."
+
+msgid "Choose authentication method"
+msgstr "Välj inloggningsmetod"
+
+#, java-format
+msgid "Select from 1 to {0}"
+msgstr "Välj från 1 till {0}"
+
+msgid "The value you entered is not valid."
+msgstr "Informationen du angivit är inte giltig."
+
+msgid "The value you entered is not valid"
+msgstr "Informationen du angivit är inte giltig"
 
 msgid ""
 "Please confirm the login in your N26 app and then return to continue the "
