--- a/po/tink-aggr-backend.pot
+++ b/po/tink-aggr-backend.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-28 11:17+0200\n"
+"POT-Creation-Date: 2021-06-30 13:49+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1876,4 +1876,9 @@ msgstr ""
 msgid ""
 "Please open the \"{0}\" Banking-App app and confirm the login via \"{1}\". "
 "Then click the \"Submit\" button"
+msgstr ""
+
+msgid ""
+"Incorrect login credentials. Are you sure that you have selected a correct "
+"branch?"
 msgstr ""
