fix(NemIdController): handle new errors
[ITE-2761]

--- a/po/da.po
+++ b/po/da.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: VERSION\n"
-"POT-Creation-Date: 2021-07-08 11:59+0000\n"
-"PO-Revision-Date: 2021-07-08 11:59+0000\n"
+"POT-Creation-Date: 2021-07-12 13:43+0000\n"
+"PO-Revision-Date: 2021-07-12 13:43+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE TEAM <EMAIL@ADDRESS>\n"
 "Language: da\n"
@@ -10,6 +10,13 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+
+msgid ""
+"A technical error has occurred. Please try again and ensure that only one "
+"NemID login is running."
+msgstr ""
+"Der er opstået en teknisk fejl. Tjek at kun ét NemID login er aktivt og "
+"forsøg igen."
 
 msgid "Input the code from your code card"
 msgstr "Indtast koden fra dit kodekort"
