--- a/po/tink-aggr-backend.pot
+++ b/po/tink-aggr-backend.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-07-08 13:55+0200\n"
+"POT-Creation-Date: 2021-07-12 15:37+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1890,4 +1890,9 @@ msgid "Business"
 msgstr ""
 
 msgid "Which account segment do you want to aggregate?"
+msgstr ""
+
+msgid ""
+"A technical error has occurred. Please try again and ensure that only one "
+"NemID login is running."
 msgstr ""
