chore(bankverlag): adds translations

--- a/po/tink-aggr-backend.pot
+++ b/po/tink-aggr-backend.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-07-28 17:49+0200\n"
+"POT-Creation-Date: 2021-08-16 11:57+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1906,4 +1906,10 @@ msgstr ""
 msgid ""
 "Open SmartID on your mobile device, check that the challenge codes match and "
 "enter the PIN. Then continue the connection."
+msgstr ""
+
+#, java-format
+msgid ""
+"Please open the \"{0}\" Banking-App app and confirm the login. Then click "
+"the \"Submit\" button"
 msgstr ""
