--- a/po/de.po
+++ b/po/de.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: VERSION\n"
-"POT-Creation-Date: 2021-07-28 15:53+0000\n"
-"PO-Revision-Date: 2021-07-28 15:53+0000\n"
+"POT-Creation-Date: 2021-08-16 09:59+0000\n"
+"PO-Revision-Date: 2021-08-16 09:59+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE TEAM <EMAIL@ADDRESS>\n"
 "Language: de\n"
@@ -11,8 +11,13 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-msgid "Instructions"
-msgstr "Anweisungen"
+#, java-format
+msgid ""
+"Please open the \"{0}\" Banking-App app and confirm the login. Then click "
+"the \"Submit\" button"
+msgstr ""
+"Bitte öffnen Sie die „{0}” Banking-App und bestätigen Sie die Anmeldung. "
+"Klicken Sie dann auf die Schaltfläche „Senden”"
 
 msgid "Input the code from your code card"
 msgstr "Geben Sie den Code von der Codekarte ein."
@@ -2030,3 +2035,6 @@ msgid ""
 msgstr ""
 "Die Zugangsdaten sind nicht korrekt. Sind Sie sicher, dass Sie die richtige "
 "Bank ausgewählt haben?"
+
+msgid "Instructions"
+msgstr "Anweisungen"
